@@ -163,6 +163,22 @@ name|ivy
 operator|.
 name|core
 operator|.
+name|cache
+operator|.
+name|ArtifactOrigin
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
 name|module
 operator|.
 name|descriptor
@@ -503,6 +519,22 @@ name|plugins
 operator|.
 name|parser
 operator|.
+name|ParserSettings
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
+name|parser
+operator|.
 name|m2
 operator|.
 name|PomReader
@@ -524,6 +556,22 @@ operator|.
 name|repository
 operator|.
 name|Resource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
+name|resolver
+operator|.
+name|DependencyResolver
 import|;
 end_import
 
@@ -1257,6 +1305,10 @@ specifier|private
 name|DefaultArtifact
 name|mainArtifact
 decl_stmt|;
+specifier|private
+name|ParserSettings
+name|parserSettings
+decl_stmt|;
 specifier|public
 name|PomModuleDescriptorBuilder
 parameter_list|(
@@ -1265,6 +1317,9 @@ name|parser
 parameter_list|,
 name|Resource
 name|res
+parameter_list|,
+name|ParserSettings
+name|ivySettings
 parameter_list|)
 block|{
 name|ivyModuleDescriptor
@@ -1339,6 +1394,10 @@ argument_list|()
 operator|+
 literal|"maven"
 argument_list|)
+expr_stmt|;
+name|parserSettings
+operator|=
+name|ivySettings
 expr_stmt|;
 block|}
 specifier|public
@@ -1480,7 +1539,79 @@ name|packaging
 argument_list|)
 condition|)
 block|{
-comment|// no artifact defined!
+comment|// no artifact defined! Add the default artifact if it exist.
+name|DependencyResolver
+name|resolver
+init|=
+name|parserSettings
+operator|.
+name|getResolver
+argument_list|(
+name|mrid
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|resolver
+operator|!=
+literal|null
+condition|)
+block|{
+name|DefaultArtifact
+name|artifact
+init|=
+operator|new
+name|DefaultArtifact
+argument_list|(
+name|mrid
+argument_list|,
+operator|new
+name|Date
+argument_list|()
+argument_list|,
+name|artifactId
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+decl_stmt|;
+name|ArtifactOrigin
+name|artifactOrigin
+init|=
+name|resolver
+operator|.
+name|locate
+argument_list|(
+name|artifact
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|ArtifactOrigin
+operator|.
+name|isUnknown
+argument_list|(
+name|artifactOrigin
+argument_list|)
+condition|)
+block|{
+name|mainArtifact
+operator|=
+name|artifact
+expr_stmt|;
+name|ivyModuleDescriptor
+operator|.
+name|addArtifact
+argument_list|(
+literal|"master"
+argument_list|,
+name|mainArtifact
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 return|return;
 block|}
 if|else if
